src/objects/TAT_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TAT_Profile_Description__c</fullName>
        <label>TAT Profile Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TAT_Profile_Long_Name__c</fullName>
        <label>TAT Profile Long Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAT_Profile_Short_Name__c</fullName>
        <label>TAT Profile Short Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAT_Profile__c</fullName>
        <label>TAT Profile</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>TAT Profile</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TAT_Profile__c</columns>
        <columns>TAT_Profile_Short_Name__c</columns>
        <columns>TAT_Profile_Long_Name__c</columns>
        <columns>TAT_Profile_Description__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TAT Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>